Quick Start Salesforce Connect/Create an External Lookup Relationship/force-app/main/default/objects/OrderDetail__x/OrderDetail__x.object-meta.xml
<CustomObject>
    <description>OrderDetails</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>OrderDetails</externalName>
    <label>OrderDetail</label>
    <pluralLabel>OrderDetails</pluralLabel>
</CustomObject>