Quick Start Salesforce Connect/Create an External Lookup Relationship/force-app/main/default/objects/OrderDetail__x/fields/orderID__c.field-meta.xml
<CustomField>
    <fullName>orderID__c</fullName>
    <description>orderID</description>
    <externalDeveloperName>orderID</externalDeveloperName>
    <label>OrderID</label>
    <length>18</length>
    <referenceTo>Order__x</referenceTo>
    <relationshipLabel>OrderDetails</relationshipLabel>
    <relationshipName>OrderDetails</relationshipName>
    <type>ExternalLookup</type>
</CustomField>