Quick Start Salesforce Connect/Create an External Lookup Relationship/force-app/main/default/objects/OrderDetail__x/fields/orderLine__c.field-meta.xml
<CustomField>
    <fullName>orderLine__c</fullName>
    <description>orderLine</description>
    <externalDeveloperName>orderLine</externalDeveloperName>
    <label>OrderLine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>